Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKN2NVogJ51GXM2zA5OzZc",
+      "authorship_tag": "ABX9TyMF4T/pJfIFo0myfaCKmZdF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3524,15 +3524,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "du7_ERmLNAEj"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# アンダースコア _ 変数は case/2 命令文の中に含まれる重要な要素\n",
@@ -3542,10 +3533,10 @@
       ],
       "metadata": {
         "id": "ZvrCgzn8MDrG",
-        "outputId": "1153055b-64c1-4894-bc9f-cb11f4841628",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1153055b-64c1-4894-bc9f-cb11f4841628"
       },
       "execution_count": 7,
       "outputs": [
@@ -3563,15 +3554,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# アンダースコア _ を\"他の全て\"にマッチする else と考える\n",
+        "# アンダースコア _ を\"他の全て\"にマッチする else と考えること\n",
         "!elixir -e 'case :even do :odd -> IO.puts \"Odd\"; _ -> IO.puts \"Not odd\" end'"
       ],
       "metadata": {
-        "id": "qmOrY5WcqHmS",
-        "outputId": "ae5234a6-8d8e-4bc1-da53-1790069fa0ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qmOrY5WcqHmS",
+        "outputId": "ae5234a6-8d8e-4bc1-da53-1790069fa0ad"
       },
       "execution_count": 8,
       "outputs": [
@@ -3585,24 +3576,72 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "du7_ERmLNAEj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# case/2 はパターンマッチングに依存しているため、パターンマッチングと同じルールや制限が全て適用される\n",
         "# 既存の変数に対してマッチさせようという場合にはピン ^ 演算子を使う\n",
-        "!elixir -e 'pie=3.14; cas'\n",
-        "\n",
-        "\n",
-        "\n",
-        "iex> pie = 3.14\n",
-        "3.14\n",
-        "iex> case \"cherry pie\" do\n",
-        "...>   ^pie -> \"Not so tasty\"\n",
-        "...>   pie -> \"I bet #{pie} is tasty\"\n",
-        "...> end\n",
-        "\"I bet cherry pie is tasty\"\n",
-        "case/2 のもう1つの素晴らしい特徴として、ガード節に対応していることがあげられます:\n",
-        "\n",
-        "この例は公式のElixirのGetting Startedガイドから直接持ってきています。\n",
+        "!elixir -e 'pie=3.14; IO.puts(case \"cherry pie\" do ^pie -> \"Not so tasty\"; pie -> \"I bet #{pie} is tasty\" end)'\n",
+        "!elixir -e 'pie=3.14; IO.puts(case \"cherry pie\" do pie -> \"Not so tasty\"; pie -> \"I bet #{pie} is tasty\" end)'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VvixstfspdMg",
+        "outputId": "358f3325-ebe2-4d0d-d203-8c74e290b47c"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I bet cherry pie is tasty\n",
+            "\u001b[33mwarning: \u001b[0mvariable \"pie\" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)\n",
+            "  nofile:1\n",
+            "\n",
+            "Not so tasty\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# case/2 はガード節に対応している\n",
+        "# 公式ドキュメントの Expressions allowed in guard clauses を参照\n",
+        "!elixir -e 'IO.puts(case {1, 2, 3} do {1, x, 3} when x > 0 ->  \"Will match\"; _ -> \"Wont match\" end)'"
+      ],
+      "metadata": {
+        "id": "vSS7z1OJhVuM",
+        "outputId": "1d26524c-91ee-4cd9-a724-3faa8f5fbc08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Will match\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "Copy\n",
         "iex> case {1, 2, 3} do\n",
@@ -3717,7 +3756,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "VvixstfspdMg"
+        "id": "Rp0tS5sZiSOc"
       },
       "execution_count": null,
       "outputs": []
