Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMF4T/pJfIFo0myfaCKmZdF",
+      "authorship_tag": "ABX9TyOdUUE0fnIa546qw6/aTEzm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3538,7 +3538,7 @@
         },
         "outputId": "1153055b-64c1-4894-bc9f-cb11f4841628"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3564,7 +3564,7 @@
         "id": "qmOrY5WcqHmS",
         "outputId": "ae5234a6-8d8e-4bc1-da53-1790069fa0ad"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3599,7 +3599,7 @@
         "id": "VvixstfspdMg",
         "outputId": "358f3325-ebe2-4d0d-d203-8c74e290b47c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3628,7 +3628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3640,46 +3640,75 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "ガード節とは何か?\n",
+        "\n",
+        "公式ドキュメントの Expressions allowed in guard clauses を参照"
+      ],
+      "metadata": {
+        "id": "gvAtkTuJudCW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cond\n",
+        "!elixir -e 'IO.puts (cond do 2+2==5 -> \"This will not be true\"; 2*2==3 -> \"Nor this\"; 1+1 == 2 -> \"But this will\" end)'"
+      ],
+      "metadata": {
+        "id": "Rp0tS5sZiSOc",
+        "outputId": "9c01863f-930e-4086-ba71-1e785211a68b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "But this will\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cond も case と同様マッチしない場合にエラーになるので、true になる条件んを定義する\n",
+        "!elixir -e 'IO.puts (cond do 7+1==0 -> \"Incorrect\"; true -> \"Catch all\" end)'"
+      ],
+      "metadata": {
+        "id": "UlmVzzxSvScP",
+        "outputId": "6bc9f835-f587-45f3-f707-aa379119e788",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Catch all\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
-        "Copy\n",
-        "iex> case {1, 2, 3} do\n",
-        "...>   {1, x, 3} when x > 0 ->\n",
-        "...>     \"Will match\"\n",
-        "...>   _ ->\n",
-        "...>     \"Won't match\"\n",
-        "...> end\n",
-        "\"Will match\"\n",
-        "公式ドキュメントからExpressions allowed in guard clausesを読んでみてください。\n",
-        "\n",
-        "cond \n",
-        "値ではなく、条件をマッチさせる必要がある時には、 cond/1 を使うことができます。これは他の言語でいうところの else if や elsif のようなものです:\n",
-        "\n",
-        "この例は公式のElixirのGetting Startedガイドから直接持ってきています。\n",
-        "\n",
-        "Copy\n",
-        "iex> cond do\n",
-        "...>   2 + 2 == 5 ->\n",
-        "...>     \"This will not be true\"\n",
-        "...>   2 * 2 == 3 ->\n",
-        "...>     \"Nor this\"\n",
-        "...>   1 + 1 == 2 ->\n",
-        "...>     \"But this will\"\n",
-        "...> end\n",
-        "\"But this will\"\n",
-        "case のように、 cond はマッチしない場合にエラーを発生させます。これに対処するには、 true になる条件を定義すればよいです:\n",
-        "\n",
-        "Copy\n",
-        "iex> cond do\n",
-        "...>   7 + 1 == 0 -> \"Incorrect\"\n",
-        "...>   true -> \"Catch all\"\n",
-        "...> end\n",
-        "\"Catch all\"\n",
         "with \n",
-        "特殊形式の with/1 はネストされた case/2 文を使うような時やきれいにパイプできない状況に便利です。 with/1 式はキーワード, ジェネレータ, そして式から成り立っています。\n",
+        "特殊形式の with/1 はネストされた case/2 文を使うような時やきれいにパイプできない状況に便利です。 \n",
+        "with/1 式はキーワード, ジェネレータ, そして式から成り立っています。\n",
         "\n",
-        "ジェネレータについてはリスト内包表記のレッスンでより詳しく述べますが、今は <- の右側と左側を比べるのにパターンマッチングが使われることを知っておくだけでよいです。\n",
+        "ジェネレータについてはリスト内包表記のレッスンでより詳しく述べますが、\n",
+        "今は <- の右側と左側を比べるのにパターンマッチングが使われることを知っておくだけでよいです。\n",
         "\n",
         "with/1 の簡単な例から始め、その後さらなる例を見てみましょう:\n",
         "\n",
@@ -3756,7 +3785,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "Rp0tS5sZiSOc"
+        "id": "_vskxd42u1yZ"
       },
       "execution_count": null,
       "outputs": []
