--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOdUUE0fnIa546qw6/aTEzm",
+      "authorship_tag": "ABX9TyPthN4od1ovlnKgwLd0E1NM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3576,15 +3576,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "du7_ERmLNAEj"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# case/2 はパターンマッチングに依存しているため、パターンマッチングと同じルールや制限が全て適用される\n",
@@ -3664,7 +3655,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3678,7 +3669,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# cond も case と同様マッチしない場合にエラーになるので、true になる条件んを定義する\n",
+        "# cond も case と同様マッチしない場合にエラーになるので、true になる条件を定義する\n",
         "!elixir -e 'IO.puts (cond do 7+1==0 -> \"Incorrect\"; true -> \"Catch all\" end)'"
       ],
       "metadata": {
@@ -3688,7 +3679,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3700,17 +3691,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "w2E4jXz1lUCp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# with\n",
+        "# 特殊形式の with/1 はネストされた case/2 文やきれいにパイプできない状況に便利\n",
+        "# with/1 式はキーワード, ジェネレータ, そして式から成り立っている\n",
+        "# ジェネレータについてはリスト内包表記のところで詳しく述べる\n",
+        "# `<-` の右側と左側を比べるのにパターンマッチングが使われる\n",
+        "!elixir -e 'usr=%{first: \"Sean\", last: \"Callan\"}; IO.inspect usr'\n"
+      ],
+      "metadata": {
+        "id": "_vskxd42u1yZ",
+        "outputId": "650037ae-5343-49d5-e901-e1fd5e15971d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "%{first: \"Sean\", last: \"Callan\"}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
-        "with \n",
-        "特殊形式の with/1 はネストされた case/2 文を使うような時やきれいにパイプできない状況に便利です。 \n",
-        "with/1 式はキーワード, ジェネレータ, そして式から成り立っています。\n",
-        "\n",
-        "ジェネレータについてはリスト内包表記のレッスンでより詳しく述べますが、\n",
-        "今は <- の右側と左側を比べるのにパターンマッチングが使われることを知っておくだけでよいです。\n",
-        "\n",
-        "with/1 の簡単な例から始め、その後さらなる例を見てみましょう:\n",
         "\n",
         "Copy\n",
         "iex> user = %{first: \"Sean\", last: \"Callan\"}\n",
@@ -3785,7 +3805,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "_vskxd42u1yZ"
+        "id": "fOCtVo-SlEP9"
       },
       "execution_count": null,
       "outputs": []
