Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+Rf3KL2DtznOoRkHUFJ63",
+      "authorship_tag": "ABX9TyPBxdYSwrgJkGpMmSWW55dO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3083,7 +3083,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3857,7 +3857,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3880,7 +3880,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3915,6 +3915,7 @@
       "source": [
         "# 関数型言語では、関数は第一級オブジェクト first class object である\n",
         "# ここでは無名関数、名前付き関数、アリティ、パターンマッチング、プライベート関数、ガード、デフォルト引数について学ぶ\n",
+        "\n",
         "# 無名関数 anonymous function\n",
         "# fn end のキーワードを用い、 引数 `->` 関数定義 の形で定義する\n",
         "\n",
@@ -3929,7 +3930,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3952,7 +3953,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3976,7 +3977,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4000,7 +4001,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4012,42 +4013,79 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# \n",
-        "%%writefile temp.exs\n",
+        "---\n",
+        "質問 無名関数に引数を渡して結果を得るのはどうやるのか\n",
         "\n",
-        "\n"
+        "&(&1 + &2).(2, 3) として出来なかった。"
       ],
       "metadata": {
-        "id": "z7lXwZVn3wQS"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Q_Te_inaI44d"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "パターンマッチング\n",
-        "Elixirではパターンマッチングは変数だけに限定されているわけではなく、次の項にあるように、関数へと適用することができます。\n",
-        "\n",
-        "Elixirはパターンマッチングを用いてマッチする可能性のある全てのオプションをチェックし、最初にマッチするオプションを選択して実行します:\n",
-        "\n",
+        "# 関数定義にパターンマッチングが使える\n",
+        "%%writefile temp.exs\n",
         "handle_result = fn\n",
-        "  {:ok, result} -> IO.puts \"Handling result...\"\n",
+        "  {:ok, _result} -> IO.puts \"Handling result...\"\n",
         "  {:ok, _} -> IO.puts \"This would be never run as previous will be matched beforehand.\"\n",
         "  {:error} -> IO.puts \"An error has occurred!\"\n",
         "end\n",
         "\n",
         "some_result = 1\n",
-        "1\n",
-        "handle_result.({:ok, some_result})\n",
-        "Handling result...\n",
-        ":ok\n",
-        "handle_result.({:error})\n",
-        "An error has occurred!\n",
+        "\n",
+        "handle_result.({:ok, some_result}) #=> Handling result...\n",
+        "handle_result.({:error}) #=> An error has occured!"
+      ],
+      "metadata": {
+        "id": "z7lXwZVn3wQS",
+        "outputId": "67bfe600-f280-4db3-e737-2592f13c0d49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "465mw6CwJY7y",
+        "outputId": "d74377b7-3340-41bd-fc2e-db3df91cca2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Handling result...\n",
+            "An error has occurred!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "\n",
         "\n",
         "名前付き関数\n",
