Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBxdYSwrgJkGpMmSWW55dO",
+      "authorship_tag": "ABX9TyO3WJTCHrIi+imzVMs6iurx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4018,11 +4018,59 @@
         "---\n",
         "質問 無名関数に引数を渡して結果を得るのはどうやるのか\n",
         "\n",
-        "&(&1 + &2).(2, 3) として出来なかった。"
+        "&(&1 + &2).(2, 3) として出来なかった。 => 出来た。\n",
+        "\n",
+        "!elixir -e 'IO.puts ((&(&1 + &2)).(2,3))'"
       ],
       "metadata": {
         "id": "Q_Te_inaI44d"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir -e 'IO.puts ((fn (a,b) -> a + b end).(2,3))'"
+      ],
+      "metadata": {
+        "id": "iEos7DcrrCU5",
+        "outputId": "a42a7b12-d42f-4f32-8f21-765ce3ab8c17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir -e 'IO.puts ((&(&1 + &2)).(2,3))'"
+      ],
+      "metadata": {
+        "id": "5r-AuEsyrup-",
+        "outputId": "a410a815-f94f-4cc5-cc40-a76f781dd141",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4047,7 +4095,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4070,7 +4118,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
