--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOB3uzaeW4IgFambDmJt9ds",
+      "authorship_tag": "ABX9TyNA4WvvMU40Z2Q5aObyZsGC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -4193,7 +4193,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4295,7 +4295,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4318,7 +4318,7 @@
         "id": "rMb-Kv0kJtWI",
         "outputId": "5d01e9e2-9c89-4186-c3b5-725417b00518"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4353,7 +4353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4376,7 +4376,7 @@
         },
         "id": "Fbe9LypEK0jM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4416,7 +4416,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4439,7 +4439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4483,7 +4483,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4506,7 +4506,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4562,7 +4562,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4585,7 +4585,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4623,7 +4623,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4646,7 +4646,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4686,7 +4686,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4709,7 +4709,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4757,7 +4757,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4780,7 +4780,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4829,7 +4829,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4852,7 +4852,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4866,69 +4866,384 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# パイプライン演算子\n",
+        "# パイプライン演算子 `|>` はある式の結果を別の式に渡す\n",
+        "# 関数のネストを理解しやすくするためのもの\n",
+        "\n",
+        "# 文字列をトークン化する、単語に分ける\n",
+        "!elixir -e 'IO.inspect \"Elixir rocks\" |> String.split()'"
+      ],
+      "metadata": {
+        "id": "drcvbJg2v8xn",
+        "outputId": "e664604b-9a60-49cc-a23f-8b3f1f7b8f59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\"Elixir\", \"rocks\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir -e 'IO.inspect \"Elixir rocks\" |> String.upcase() |> String.split()'"
+      ],
+      "metadata": {
+        "id": "3G5UUcSwCzWj",
+        "outputId": "81a275de-b7c1-4c0f-a304-fd2cdfcae6ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\"ELIXIR\", \"ROCKS\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# パイプラインを使う場合に関数の括弧は省略せずには入れた方がわかりやすい\n",
+        "!elixir -e 'IO.inspect \"elixir\" |> String.ends_with?(\"ixir\")'"
+      ],
+      "metadata": {
+        "id": "cQAmkedpC5xx",
+        "outputId": "3152e33b-7a22-48f3-8550-4088fea8b506",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "true\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
       ],
       "metadata": {
-        "id": "OKDAyClwwUy3"
+        "id": "sgXbirObD_pQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# モジュール"
+      ],
+      "metadata": {
+        "id": "UGlC7_x6EB0i"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "質問 いままで IO.puts とか一々モジュール名を付けていたが、elixir ではこれが普通なのか?\n",
+        "\n",
+        "関数を作る際に一々モジュールを作成していたがあれで既存のモジュールに付け加えられているのか?"
+      ],
+      "metadata": {
+        "id": "65UKVe_iEWc7"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# パイプライン演算子\n",
-        "Elixir School\n",
-        "Why Elixir?\n",
-        "Lessons\n",
-        "Blog\n",
-        "Get Involved\n",
-        "ja\n",
+        "\n",
+        "\n",
+        "\n",
+        "モジュール\n",
+        "私たちは経験的に、全ての関数を1つの同じファイルとスコープに持つと手に負えないことを知っています。 \n",
+        "このレッスンでは関数をまとめ、構造体として知られる特別なマップを定義することで、コードをより効率のよい形に組織化する方法を取り上げます。\n",
+        "\n",
+        "Table of Contents\n",
+        "モジュール\n",
+        "モジュールの属性\n",
+        "構造体\n",
+        "alias\n",
+        "import\n",
+        "フィルタリング\n",
+        "require\n",
+        "use\n",
+        "モジュール\n",
+        "モジュールは関数群を名前空間へと組織する最良の方法です。 \n",
+        "関数をまとめることに加えて、関数のレッスンで取り上げた名前付き関数やプライベート関数を定義できます。\n",
+        "\n",
+        "基本的な例を見てみましょう:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  def greeting(name) do\n",
+        "    \"Hello #{name}.\"\n",
+        "  end\n",
+        "end\n",
+        "\n",
+        "Example.greeting \"Sean\"\n",
+        "\"Hello Sean.\"\n",
+        "Elixirではモジュールをネストすることが可能で、機能ごとにさらなる名前空間をつけることができます:\n",
+        "\n",
+        "defmodule Example.Greetings do\n",
+        "  def morning(name) do\n",
+        "    \"Good morning #{name}.\"\n",
+        "  end\n",
+        "\n",
+        "  def evening(name) do\n",
+        "    \"Good night #{name}.\"\n",
+        "  end\n",
+        "end\n",
+        "\n",
+        "Example.Greetings.morning \"Sean\"\n",
+        "\"Good morning Sean.\"\n",
+        "モジュールの属性\n",
+        "モジュール属性はElixirでは一般に定数として用いられることがほとんどです。 単純な例を見てみましょう:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  @greeting \"Hello\"\n",
+        "\n",
+        "  def greeting(name) do\n",
+        "    ~s(#{@greeting} #{name}.)\n",
+        "  end\n",
+        "end\n",
+        "重要なので言及しておきますと、Elixirには予約されている属性があります。 もっとも一般的なのは以下の3つです:\n",
+        "\n",
+        "moduledoc — 現在のモジュールにドキュメントを付けます。\n",
+        "doc — 関数やマクロについてのドキュメント管理。\n",
+        "behaviour — OTPまたはユーザが定義した振る舞い(ビヘイビア)に用います。\n",
+        "構造体\n",
+        "構造体は定義済みのキーの一群とデフォルト値を持つ特殊なマップです。 モジュール内部で定義されなくてはならず、そのモジュールから名前をとります。 構造体にとっては、モジュール内部で自身しか定義されていないというのもありふれたことです。\n",
+        "\n",
+        "構造体を定義するには defstruct を用い、フィールドとデフォルト値のキーワードリストを添えます:\n",
+        "\n",
+        "defmodule Example.User do\n",
+        "  defstruct name: \"Sean\", roles: []\n",
+        "end\n",
+        "いくつか構造体を作ってみましょう:\n",
+        "\n",
+        "%Example.User{}\n",
+        "%Example.User<name: \"Sean\", roles: [], ...>\n",
+        "\n",
+        "%Example.User{name: \"Steve\"}\n",
+        "%Example.User<name: \"Steve\", roles: [], ...>\n",
+        "\n",
+        "%Example.User{name: \"Steve\", roles: [:manager]}\n",
+        "%Example.User<name: \"Steve\", roles: [:manager]>\n",
+        "構造体はあたかもマップのように更新することができます:\n",
+        "\n",
+        "steve = %Example.User{name: \"Steve\"}\n",
+        "%Example.User<name: \"Steve\", roles: [...], ...>\n",
+        "sean = %{steve | name: \"Sean\"}\n",
+        "%Example.User<name: \"Sean\", roles: [...], ...>\n",
+        "最も重要なことですが、構造体はマップに対してマッチすることができます:\n",
+        "\n",
+        "%{name: \"Sean\"} = sean\n",
+        "%Example.User<name: \"Sean\", roles: [...], ...>\n",
+        "Elixir 1.8以降、構造体にカスタムイントロスペクション機能が追加されました。\n",
+        "\n",
+        "カスタムイントロスペクションがどのように使われるのかを理解するため、 sean の中身を見てみましょう。\n",
+        "\n",
+        "inspect(sean)\n",
+        "\"%Example.User<name: \\\"Sean\\\", roles: [...], ...>\"\n",
+        "この例では全てのフィールドが出力対象になっていますが、出力したくない項目がある場合、どのようにしたら良いでしょうか？ この場合、 @derive を利用することで実現することができます！ roles を出力から除外したい場合、以下のように記述します。\n",
+        "\n",
+        "defmodule Example.User do\n",
+        "  @derive {Inspect, only: [:name]}\n",
+        "  defstruct name: nil, roles: []\n",
+        "end\n",
+        "注記： @derive {Inspect, except: [:roles]} でも実現することができます。\n",
+        "\n",
+        "モジュールを更新したら、 iex で確認してみましょう。\n",
+        "\n",
+        "sean = %Example.User{name: \"Sean\"}\n",
+        "%Example.User<name: \"Sean\", ...>\n",
+        "inspect(sean)\n",
+        "\"%Example.User<name: \\\"Sean\\\", ...>\"\n",
+        "roles が出力から除外されました!\n",
+        "\n",
+        "コンポジション(Composition)\n",
+        "さて、モジュールと構造体の作り方がわかったので、コンポジションを用いてモジュールや構造体に既存の機能を追加する方法を学びましょう。 Elixirは他のモジュールと連携する様々な方法を用意しています。\n",
+        "\n",
+        "alias\n",
+        "モジュール名をエイリアスすることができます。Elixirのコードでは頻繁に使われます:\n",
+        "\n",
+        "defmodule Sayings.Greetings do\n",
+        "  def basic(name), do: \"Hi, #{name}\"\n",
+        "end\n",
+        "\n",
+        "defmodule Example do\n",
+        "  alias Sayings.Greetings\n",
+        "\n",
+        "  def greeting(name), do: Greetings.basic(name)\n",
+        "end\n",
+        "\n",
+        "# aliasを使わない場合\n",
+        "\n",
+        "defmodule Example do\n",
+        "  def greeting(name), do: Sayings.Greetings.basic(name)\n",
+        "end\n",
+        "2つのエイリアス間で衝突があったり、全体を別名でエイリアスしたい場合には、 :as オプションを使います:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  alias Sayings.Greetings, as: Hi\n",
+        "\n",
+        "  def print_message(name), do: Hi.basic(name)\n",
+        "end\n",
+        "複数のモジュールを一度にエイリアスすることも可能です:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  alias Sayings.{Greetings, Farewells}\n",
+        "end\n",
+        "import\n",
+        "モジュールをエイリアスするよりも、関数を取り込みたいという場合には、 import を使います:\n",
+        "\n",
+        "last([1, 2, 3])\n",
+        "** (CompileError) iex:9: undefined function last/1\n",
+        "import List\n",
+        "nil\n",
+        "last([1, 2, 3])\n",
+        "3\n",
+        "フィルタリング\n",
+        "デフォルトでは全ての関数とマクロが取り込まれますが、 :only や :except オプションを使うことでフィルタすることができます。\n",
+        "\n",
+        "特定の関数やマクロを取り込むには、名前/アリティのペアを :only や :except に渡す必要があります。 last/1 で最後の関数のみを取り込んでみましょう:\n",
+        "\n",
+        "import List, only: [last: 1]\n",
+        "first([1, 2, 3])\n",
+        "** (CompileError) iex:13: undefined function first/1\n",
+        "last([1, 2, 3])\n",
+        "3\n",
+        "last/1 で指定された関数以外を全て取り込むには、同じ関数で試してみましょう:\n",
+        "\n",
+        "import List, except: [last: 1]\n",
+        "nil\n",
+        "first([1, 2, 3])\n",
+        "1\n",
+        "last([1, 2, 3])\n",
+        "** (CompileError) iex:3: undefined function last/1\n",
+        "名前/アリティのペアに加えて、 :functions と :macros という2つの特別なアトムもあります。これらはそれぞれ関数とマクロのみを取り込みます:\n",
+        "\n",
+        "import List, only: :functions\n",
+        "import List, only: :macros\n",
+        "require\n",
+        "他のモジュールのマクロを使用することをElixirに伝えるために require を使うことができます。 import とのわずかな違いは、関数ではなくマクロを使用可能とすることです。\n",
+        "\n",
+        "defmodule Example do\n",
+        "  require SuperMacros\n",
+        "\n",
+        "  SuperMacros.do_stuff\n",
+        "end\n",
+        "まだロードされていないマクロを呼びだそうとすると、Elixirはエラーを発生させます。\n",
+        "\n",
+        "use\n",
+        "use マクロを用いることで他のモジュールを利用して現在のモジュールの定義を変更することができます。 コード上で use を呼び出すと、実際には提供されたモジュールに定義されている __using__/1 コールバックを呼び出します。 __using__/1 マクロの結果はモジュールの定義の一部になります。 この動作に対する理解を深めるために簡単な例を見ましょう:\n",
+        "\n",
+        "defmodule Hello do\n",
+        "  defmacro __using__(_opts) do\n",
+        "    quote do\n",
+        "      def hello(name), do: \"Hi, #{name}\"\n",
+        "    end\n",
+        "  end\n",
+        "end\n",
+        "ここでは hello/1 関数を定義する __using__/1 コールバックを定義した Hello モジュールを作りました。 この新しいコードを試すために新しいモジュールを作ります:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  use Hello\n",
+        "end\n",
+        "IExでこのコードを試して見ると Example モジュールで hello/1 を使えるのがわかります。\n",
+        "\n",
+        "Example.hello(\"Sean\")\n",
+        "\"Hi, Sean\"\n",
+        "ここで use が Hello の __using__/1 コールバックを呼び出して、結果のコードをモジュールに追加します。 基本的な例を見せたので、ここからはこのコードを変更して __using__/1 にオプションをサポートする方法を見てみましょう。 greeting オプションを追加します:\n",
+        "\n",
+        "defmodule Hello do\n",
+        "  defmacro __using__(opts) do\n",
+        "    greeting = Keyword.get(opts, :greeting, \"Hi\")\n",
+        "\n",
+        "    quote do\n",
+        "      def hello(name), do: unquote(greeting) <> \", \" <> name\n",
+        "    end\n",
+        "  end\n",
+        "end\n",
+        "新しく作った greeting オプションを含むために Example モジュールを更新します:\n",
+        "\n",
+        "defmodule Example do\n",
+        "  use Hello, greeting: \"Hola\"\n",
+        "end\n",
+        "IExで試して見ると挨拶が変わるのを確認できます。\n",
+        "\n",
+        "iex> Example.hello(\"Sean\")\n",
+        "\"Hola, Sean\"\n",
+        "これらは use がどうやって動作するのかを説明する簡単な例でしたが、これはElixirのツールボックスで信じられないほどに強力なツールです。 Elixirを学び続けたら use をあっちこっちで見ることになるでしょう。かならず見ることになりそうな例をひとつあげれば、 use ExUnit.Case, async: true です。\n",
+        "\n",
+        "注意: quote 、 alias 、 use 、 require はメタプログラミングで使用してたマクロです。\n",
+        "\n",
+        "Caught a mistake or want to contribute to the lesson? Edit this lesson on GitHub!\n",
+        "PREVIOUS LESSON\n",
         "パイプライン演算子\n",
         "パイプライン演算子(|>)はある式の結果を別の式に1つ目の引数として渡します。\n",
         "\n",
-        "Table of Contents\n",
-        "導入\n",
-        "例\n",
-        "ベストプラクティス\n",
-        "導入\n",
-        "プログラミングは厄介になりえます。実際とても厄介なことに、関数呼び出しを深くしすぎると把握するのがとても難しくなります。以下のネストされた関数を考えてみてください:\n",
+        "NEXT LESSON\n",
+        "Mix\n",
+        "私たちがElixirの深海へと潜れるようになる前に、まずmixについて学ぶ必要があります。Rubyに詳しければ、mixとはBundlerとRubyGems、そしてRakeが組み合わさったものです。あらゆるElixirプロジェクトに欠かせない部分であり、このレッスンではその素晴らしい機能のうち、ほんの一部を探検していきます。あなたの環境でmixが提供する全ての機能を知るにはmix helpを実行してください。\n",
         "\n",
-        "foo(bar(baz(new_function(other_function()))))\n",
-        "ここでは、 other_function/0 の値を new_function/1 に、 new_function/1 の値を baz/1 に、 baz/1 の値を bar/1 に、そして最後に bar/1 の結果を foo/1 に渡しています。 Elixirではパイプライン演算子を使うことによって構文的な混沌に対し現実的にアプローチします。 パイプライン演算子(|>)は 一つの式の結果を取り、それを渡します 。先ほどのコードスニペットをパイプライン演算子で書き直すとどうなるか、見てみましょう。\n",
+        "今まではもっぱら制限のある iex の内部で取り組んできました。何か実際に動くものを作るには、コードを複数のファイルに分けて効率的に管理する必要があります。そしてmixは複数のプロジェクトでそうした開発を支えます。\n",
         "\n",
-        "other_function() |> new_function() |> baz() |> bar() |> foo()\n",
-        "パイプライン演算子は結果を左に取りそれを右側に渡します。\n",
+        "Footer\n",
+        "Elixir School\n",
+        "The premier destination for learning and mastering Elixir\n",
         "\n",
-        "例\n",
-        "この例のセットのためにElixirのStringモジュールを使います。\n",
+        "Twitter\n",
+        "GitHub\n",
+        "GETTING STARTED\n",
         "\n",
-        "おおまかに文字列をトークン化する\n",
-        "\"Elixir rocks\" |> String.split()\n",
-        "[\"Elixir\", \"rocks\"]\n",
-        "全てのトークンを大文字にする\n",
-        "\"Elixir rocks\" |> String.upcase() |> String.split()\n",
-        "[\"ELIXIR\", \"ROCKS\"]\n",
-        "文字列の終わりを調べる\n",
-        "\"elixir\" |> String.ends_with?(\"ixir\")\n",
-        "true\n",
-        "ベストプラクティス\n",
-        "関数のアリティが1より多いなら括弧を使うようにしてください。括弧の有無はElixirにおいてはたいした問題ではありませんが、あなたのコードを誤解するかもしれない他のプログラマにとっては問題です。もし3つ目の例で String.ends_with?/2 から括弧を削除すると, 以下のように警告されます。\n",
+        "Why Elixir?\n",
+        "Podcasts\n",
+        "Conferences\n",
+        "LESSONS\n",
         "\n",
-        "\"elixir\" |> String.ends_with? \"ixir\"\n",
-        "warning: parentheses are required when piping into a function call. For example:\n",
+        "Basics\n",
+        "Intermediate\n",
+        "Advanced\n",
+        "Testing\n",
+        "Data Processing\n",
+        "Ecto\n",
+        "Storage\n",
+        "Miscellaneous\n",
+        "BLOG\n",
         "\n",
-        "  foo 1 |> bar 2 |> baz 3\n",
+        "Announcements\n",
+        "Today I Learned (TIL)\n",
+        "Reviews\n",
+        "PROJECT\n",
         "\n",
-        "is ambiguous and should be written as\n",
-        "\n",
-        "  foo(1) |> bar(2) |> baz(3)\n",
-        "\n",
-        "true\n",
-        "C"
+        "Get Involved\n",
+        "Translation Report\n",
+        "© 2021 Sean Callan — @doomspork"
       ],
       "metadata": {
-        "id": "drcvbJg2v8xn"
+        "id": "WSh4PoXbDju9"
       },
       "execution_count": null,
       "outputs": []
