Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMybpDxXPCJOQRDo5MKQNax",
+      "authorship_tag": "ABX9TyNvaEpTDMheKls9iX5+HgYf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +92,7 @@
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5075,15 +5074,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "EQwY9bRdvwv7"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# モジュールの属性\n",
@@ -5110,7 +5100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5133,7 +5123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5145,53 +5135,101 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "UwJ2jrfXcvhj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 構造体 struct \n",
+        "# 構造体は定義済みのキーの一群とデフォルト値を持つマップである\n",
+        "# 定義するには defstruct を用いる\n",
+        "%%writefile temp.exs\n",
+        "defmodule Example.User do\n",
+        "  defstruct name: \"Sean\", roles: []\n",
+        "end\n",
+        "\n",
+        "defmodule Main do\n",
+        "  IO.inspect %Example.User{}\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "_5D0C1FdnE9-",
+        "outputId": "e37217d8-61f5-4dcb-a316-c00c82261fe7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "4hRQw409eMTP",
+        "outputId": "5741a3cc-3734-4a0a-a1b6-2e4a013835e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "%Example.User{name: \"Sean\", roles: []}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
         "\n",
-        "\n",
-        "重要なので言及しておきますと、Elixirには予約されている属性\n",
-        "がありる もっとも一般的なのは以下の3つです:\n",
-        "\n",
-        "moduledoc — 現在のモジュールにドキュメントを付ける\n",
-        "doc — 関数やマクロについてのドキュメント管理。\n",
-        "behaviour — OTPまたはユーザが定義した振る舞い(ビヘイビア)に用いる\n",
-        "\n",
-        "\n",
-        "構造体\n",
-        "構造体は定義済みのキーの一群とデフォルト値を持つ特殊なマップです。 モジュール内部で定義されなくてはならず、そのモジュールから名前をとりる 構造体にとっては、モジュール内部で自身しか定義されていないというのもありふれたことです。\n",
-        "\n",
-        "構造体を定義するには defstruct を用い、フィールドとデフォルト値のキーワードリストを添えます:\n",
-        "\n",
-        "defmodule Example.User do\n",
-        "  defstruct name: \"Sean\", roles: []\n",
-        "end\n",
-        "いくつか構造体を作ってみましょう:\n",
-        "\n",
-        "%Example.User{}\n",
-        "%Example.User<name: \"Sean\", roles: [], ...>\n",
         "\n",
         "%Example.User{name: \"Steve\"}\n",
         "%Example.User<name: \"Steve\", roles: [], ...>\n",
         "\n",
         "%Example.User{name: \"Steve\", roles: [:manager]}\n",
         "%Example.User<name: \"Steve\", roles: [:manager]>\n",
+        "\n",
         "構造体はあたかもマップのように更新することができます:\n",
         "\n",
         "steve = %Example.User{name: \"Steve\"}\n",
         "%Example.User<name: \"Steve\", roles: [...], ...>\n",
         "sean = %{steve | name: \"Sean\"}\n",
         "%Example.User<name: \"Sean\", roles: [...], ...>\n",
+        "\n",
         "最も重要なことですが、構造体はマップに対してマッチすることができます:\n",
         "\n",
         "%{name: \"Sean\"} = sean\n",
         "%Example.User<name: \"Sean\", roles: [...], ...>\n",
+        "\n",
         "Elixir 1.8以降、構造体にカスタムイントロスペクション機能が追加されました。\n",
         "\n",
         "カスタムイントロスペクションがどのように使われるのかを理解するため、 sean の中身を見てみましょう。\n",
         "\n",
         "inspect(sean)\n",
         "\"%Example.User<name: \\\"Sean\\\", roles: [...], ...>\"\n",
+        "\n",
         "この例では全てのフィールドが出力対象になっていますが、出力したくない項目がある場合、どのようにしたら良いでしょうか？ この場合、 @derive を利用することで実現することができます！ roles を出力から除外したい場合、以下のように記述しる\n",
         "\n",
         "defmodule Example.User do\n",
@@ -5321,7 +5359,10 @@
         "\n",
         "iex> Example.hello(\"Sean\")\n",
         "\"Hola, Sean\"\n",
-        "これらは use がどうやって動作するのかを説明する簡単な例でしたが、これはElixirのツールボックスで信じられないほどに強力なツールです。 Elixirを学び続けたら use をあっちこっちで見ることになるでしょう。かならず見ることになりそうな例をひとつあげれば、 use ExUnit.Case, async: true です。\n",
+        "これらは use がどうやって動作するのかを説明する簡単な例でしたが、\n",
+        "これはElixirのツールボックスで信じられないほどに強力なツールです。 \n",
+        "Elixirを学び続けたら use をあっちこっちで見ることになるでしょう。\n",
+        "かならず見ることになりそうな例をひとつあげれば、 use ExUnit.Case, async: true です。\n",
         "\n",
         "注意: quote 、 alias 、 use 、 require はメタプログラミングで使用してたマクロです。\n",
         "\n",
@@ -5335,14 +5376,16 @@
         "私たちがElixirの深海へと潜れるようになる前に、まずmixについて学ぶ必要がありる\n",
         "Rubyに詳しければ、mixとはBundlerとRubyGems、そしてRakeが組み合わさったものです。\n",
         "あらゆるElixirプロジェクトに欠かせない部分であり、このレッスンではその素晴らしい機能のうち、\n",
-        "ほんの一部を探検していきるあなたの環境でmixが提供する全ての機能を知るにはmix helpを実行してください。\n",
+        "ほんの一部を探検していきるあなたの環境でmixが提供する全ての機能を知るにはmix help\n",
+        "を実行してください。\n",
         "\n",
         "今まではもっぱら制限のある iex の内部で取り組んできました。何か実際に動くものを作るには、\n",
-        "コードを複数のファイルに分けて効率的に管理する必要がありるそしてmixは複数のプロジェクトでそうした開発を支える\n",
+        "コードを複数のファイルに分けて効率的に管理する必要がありるそしてmixは複数の\n",
+        "プロジェクトでそうした開発を支える\n",
         "\n"
       ],
       "metadata": {
-        "id": "_5D0C1FdnE9-"
+        "id": "pg8PBjgIeIQw"
       },
       "execution_count": null,
       "outputs": []
